# api/v1/system/login_api.go
@@ -15,7 +15,7 @@ type LoginApi struct {
 //	@Summary	用户登录
 //	@Tags		授权
 //	@Param		request	body		request.SignRequest								true	"用户登录"
-//	@success	200		{object}	result.HttpResult{data=request.SignResponse}	"desc"
+//	@success	200		{object}	result.HttpResult{data=response.SignResponse}	"desc"
 //	@Router		/login/sign [post]
 func (api *LoginApi) Login(ctx *gin.Context) {
 	signRequest := request.SignRequest{}
@@ -24,8 +24,7 @@ func (api *LoginApi) Login(ctx *gin.Context) {
 		jsonResult.HttpResultError(err.Error())
 		return
 	}
-	loginService := service.LoginService{}
-	resp, err := loginService.Sign(&signRequest)
+	resp, err := service.LoginService.Sign(&signRequest)
 	if err != nil {
 		jsonResult.HttpResultError(err.Error())
 		return
