# common/request/system/login_request.go
@@ -4,8 +4,3 @@ type SignRequest struct {
 	Username string `json:"username" binding:"required" form:"username"`
 	Password string `json:"password" binding:"required" form:"password"`
 }
-
-type SignResponse struct {
-	AccessToken string `json:"accessToken"`
-	ExpiresIn   int    `json:"expiresIn"`
-}
