# common/response/system/login_response.go
@@ -1,1 +1,6 @@
 package response
+
+type SignResponse struct {
+	AccessToken string `json:"accessToken"`
+	ExpiresIn   int    `json:"expiresIn"`
+}
