# docs/swagger.json
@@ -590,7 +590,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/request.SignResponse"
+                                            "$ref": "#/definitions/response.SignResponse"
                                         }
                                     }
                                 }
@@ -1211,6 +1211,45 @@
                 }
             }
         },
+        "/user/getUserInfo": {
+            "get": {
+                "tags": [
+                    "用户管理"
+                ],
+                "summary": "获取用户信息",
+                "parameters": [
+                    {
+                        "description": "用户信息",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.SignRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "desc",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/result.HttpResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.GetUserInfoResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/user/info/{id}": {
             "get": {
                 "tags": [
@@ -1649,10 +1688,6 @@
                     "description": "用户昵称",
                     "type": "string"
                 },
-                "password": {
-                    "description": "密码",
-                    "type": "string"
-                },
                 "phone": {
                     "description": "手机号",
                     "type": "string"
@@ -1933,17 +1968,6 @@
                 }
             }
         },
-        "request.SignResponse": {
-            "type": "object",
-            "properties": {
-                "accessToken": {
-                    "type": "string"
-                },
-                "expiresIn": {
-                    "type": "integer"
-                }
-            }
-        },
         "request.UpdateDeptRequest": {
             "type": "object",
             "properties": {
@@ -2180,11 +2204,48 @@
                 }
             }
         },
+        "response.GetUserInfoResponse": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "desc": {
+                    "type": "string"
+                },
+                "realName": {
+                    "type": "string"
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "userId": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "response.PageResponse": {
             "type": "object",
             "properties": {
                 "list": {},
                 "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "response.SignResponse": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "expiresIn": {
                     "type": "integer"
                 }
             }
